# Gimme-Idea

./: .gitignore  ADMIN_FEATURE_DEPLOYMENT.md  BAO_CAO_SUA_LOI_VI.md  BUG_FIXES_REPORT.md  CHANGES_SUMMARY.md  CLOUDFLARE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DO_THESE_2_THINGS.txt  EMAIL_AUTH_SETUP.md  FINAL_FIX_EXPLANATION.md  FIX_INSTRUCTIONS.md  INSTALLATION_NOTES.md  NOTION_README.md  QUICK_START_GUIDE.md  UI-STRUCTURE.md  debug-wallet.md  doneAI.md  planAI.md  render.yaml  start-local.sh
.gemini/: related-projects-search-fix.md
GMI-BE/: .railwayignore  nixpacks.toml  setup-database.sql  start-server.js  test-connection.js
GMI-FE test/: .env.example  README.md  package-lock.json  package.json
GMI-SC/: Anchor.toml
GMI-SC/programs/gimme-idea/: Cargo.toml
GMI-SC/programs/gimme-idea/src/: lib.rs
backend/: .env.example  run-ai-migration.sh
devdocs/: 01-project-idea-management.md  02-ai-powered-features.md  03-hackathon-management.md  04-notification-system.md  05-blockchain-payments.md  06-authentication-profiles.md  07-admin-system.md  README(technical).md  README.md
docs/: FEATURE_STATUS.md  README.md
frontend/: .env.example  App.tsx  BACKEND_INTEGRATION.md  constants.ts  next.config.js  package.json  tsconfig.tsbuildinfo
gimme-idea-new-ui/: App.tsx  DEPLOY-VERCEL.md  DEPLOYMENT-GUIDE.md  INTEGRATION-README.md  VERCEL-DEPLOY.md  VERCEL-ENV-VARS.md  index.html  metadata.json  package-lock.json  package.json  types.ts  vite-plugin-importmap.js  vite.config.ts
gmi/: package-lock.json  package.json
scripts/: generate-seed.js
(+324 files in other folders)
