[package]
name = "gimme-idea"
version = "0.1.0"
description = "Gimme Idea - Web3 Feedback Platform Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gimme_idea"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
indexmap = "=2.11.0"
